--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /*stylesheet */
 :root
 {
- --background-color: #222831;
- --body-color: #393e46;
+ --background-color: #191b1f;
+ --body-color: #2d323b;
 }
 
 
@@ -63,10 +63,15 @@ h4
   max-width: 1200px;
 }
 
-#main, #footer, #masthead
+#main
 {
   margin: 2em 2em 0;
 }
+
+/*#masthead
+{
+  margin: 2em 0;
+} */
 
 #logo a
 {
@@ -138,7 +143,7 @@ h4
   font-weight: 600;
   letter-spacing: 1px;
   margin-bottom: 2rem;
-
+}
   #work h3 a, #page h3 a {
     color: var(--body-color);
     text-decoration: none;
@@ -148,6 +153,7 @@ h4
     overflow: hidden;
     position: relative;
     width: 100%;
+    padding-bottom: 2em;
   }
 
   .work-item .inner .work-inside {
@@ -228,24 +234,18 @@ h4
   /*FOOTER*/
 
   #footer {
-    width: 100%;
-    overflow: hidden;
+
     text-align: center;
-    font-size: 1.2em;
     background-color: var(--body-color);
     color: #eee;
-    margin-top: 1rem;
-    padding: 2em;
     font-weight: bold;
+    font-size: 15px;
   }
 
 
-  #footer p:last-child {
-    margin-bottom: 0;
-    background-color: var(--body-color);
-    text-align: center;
-    color: #eee;
-  }
+/*  #footer p{
+    font-size: 15px;
+  } */
 
   /*RESPONSIVE*/
 
